--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "node_lab2",
   "version": "0.5.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "type": "module",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
